--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <button id="fileButton" onclick="document.getElementById('fileInput').click()"><i class="fas fa-file"></i></button>
                 <button id="sendButton" onclick="sendMessage()"><i class="fas fa-paper-plane"></i></button>
                 </div>
-                <textarea id="messageInput" placeholder="输入消息..."></textarea>
+                <textarea id="messageInput" placeholder="说点什么..."></textarea>
             </div>
         </div>
     </div>
